[workspace]

[package]
name = "bevy-inspector-egui"
version = "0.18.3"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = [
    "game-development",
    "gui",
    "visualization",
    "development-tools::procedural-macro-helpers",
]

[features]
default = ["bevy_pbr"]
highlight_changes = []

[dependencies]
bevy-inspector-egui-derive = { version = "0.18.1", path = "../bevy-inspector-egui-derive" }
bevy_app = { path = "../../../bevy_am/crates/bevy_app" }
bevy_asset = { path = "../../../bevy_am/crates/bevy_asset" }
bevy_core = { path = "../../../bevy_am/crates/bevy_core" }
bevy_ecs = { path = "../../../bevy_am/crates/bevy_ecs" }
bevy_hierarchy = { path = "../../../bevy_am/crates/bevy_hierarchy" }
bevy_log = { path = "../../../bevy_am/crates/bevy_log" }
bevy_math = { path = "../../../bevy_am/crates/bevy_math" }
bevy_reflect = { path = "../../../bevy_am/crates/bevy_reflect" }
bevy_utils = { path = "../../../bevy_am/crates/bevy_utils" }
bevy_window = { path = "../../../bevy_am/crates/bevy_window" }

bevy_core_pipeline = { path = "../../../bevy_am/crates/bevy_core_pipeline" }
bevy_pbr = { path = "../../../bevy_am/crates/bevy_pbr", optional = true }
bevy_render = { path = "../../../bevy_am/crates/bevy_render" }

egui = "0.22"
bevy_egui = { path = "../../../bevy_egui" }

image = { version = "0.24", default-features = false }
once_cell = "1.16"
pretty-type-name = "1.0"
smallvec = "1.10"

[dev-dependencies]
bevy = { path = "../../../bevy_am", default-features = false, features = [
    "x11",
    "bevy_winit",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_core_pipeline",
    "animation",
    "png",
    "zstd",
    "tonemapping_luts",
    "ktx2",
] }
egui_dock = "0.6"
egui-gizmo = "0.11"
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
# bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"